fixed some spacing, made home links disappear

--- a/src/client/components/nav-list/nav-list.scss
+++ b/src/client/components/nav-list/nav-list.scss
@@ -37,6 +37,10 @@
           display: inline-block;
           padding: 10px 1px;
 
+          &:not(:first-child) {
+            margin-left: 4px;
+          }
+
           &:hover svg path {
             fill: #888;
           }
